@@ -15,4 +15,12 @@ dfsch_object_t* dfsch_http_query_2_alist(char* query);
 dfsch_strbuf_t* dfsch_inet_urldecode(dfsch_strbuf_t* str_buf);
 dfsch_strbuf_t* dfsch_inet_urlencode(dfsch_strbuf_t* str_buf);
 
+dfsch_strbuf_t* dfsch_inet_base64_decode(dfsch_strbuf_t* str_buf);
+dfsch_strbuf_t* dfsch_inet_base64_encode(dfsch_strbuf_t* str_buf,
+                                         int wrap,
+                                         int pad);
+dfsch_strbuf_t* dfsch_inet_uri_base64_decode(dfsch_strbuf_t* str_buf);
+dfsch_strbuf_t* dfsch_inet_uri_base64_encode(dfsch_strbuf_t* str_buf);
+
+
 #endif
