@@ -3,6 +3,7 @@
 	* lib/inet.c: internet (HTTP) data handling module
 	(dfsch_inet_url..code): urlencode and urldecode
 	(urldecode_to_string): urldecode results from URI parsing
+	(dfsch_inet_base64_encode): base64 encoder
 
 2007-12-22  Ales Hakl  <ales at hakl dot net>
 
